Add main.js file.

--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
         <button class="btn-submit" type="submit">Add</button>
       </div>
     </form>
+
+    <script src="main.js"></script>
   </body>
 </html>
