Add header and a ul list.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
+    <header>
+      <nav>
+        <ul>
+          <li>List</li>
+          <li>Add New Book</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
     <div class="container">
       <h1 class="section-title">All awesome books</h1>
       <div class="books-container"></div>
