Add contact information.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
 
     <header>
+      <p>AwesomeBooks</p>
       <nav>
         <ul>
           <li>List</li>
@@ -19,18 +20,36 @@
         </ul>
       </nav>
     </header>
-    <div class="container">
+    <section>
       <h1 class="section-title">All awesome books</h1>
       <div class="books-container"></div>
 
       <div class="partition"></div>
 
+    </section>
+    <section>
       <h2 class="form-title">Add a new book</h2>
       <form action="" class="form">
         <input class="form-control" name="title" type="text" placeholder="Title" id="title" />
         <input class="form-control" name="author" type="text" placeholder="Author" id="author" />
         <button class="btn-submit" type="submit">Add</button>
       </form>
+    </section>
+    <section>
+<h2>Contact information</h2>
+
+<p>Do you have any questions or you just want to say "Hello"?<p>
+  <p>You can reach out to us</p>
+<Ol>
+  <li>Our eamil: <a href="mailto:kayongachiteta01@gmail.com">kayongachiteta01@gmail.com</a> </li>
+  <li>Our phone number: <a href="tel:+251911558295">+251911558295</a></li>
+  <li>Our Adress: Streetname 22, 84503 City, Country</li>
+</Ol>
+
+    </section>
+    <div class="container">
+  
+
     </div>
     <script src="main.js"></script>
   </body>
