Add class name to elements

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
-    <header>
+    <header class="container">
       <p>AwesomeBooks</p>
       <nav>
         <ul>
@@ -20,14 +19,13 @@
         </ul>
       </nav>
     </header>
-    <section>
+    <section class="container section section-1 section--active">
       <h1 class="section-title">All awesome books</h1>
       <div class="books-container"></div>
 
       <div class="partition"></div>
-
     </section>
-    <section>
+    <section class="container section section-1">
       <h2 class="form-title">Add a new book</h2>
       <form action="" class="form">
         <input class="form-control" name="title" type="text" placeholder="Title" id="title" />
@@ -35,22 +33,23 @@
         <button class="btn-submit" type="submit">Add</button>
       </form>
     </section>
-    <section>
-<h2>Contact information</h2>
+    <section class="container section section-1">
+      <h2>Contact information</h2>
 
-<p>Do you have any questions or you just want to say "Hello"?<p>
-  <p>You can reach out to us</p>
-<Ol>
-  <li>Our eamil: <a href="mailto:kayongachiteta01@gmail.com">kayongachiteta01@gmail.com</a> </li>
-  <li>Our phone number: <a href="tel:+251911558295">+251911558295</a></li>
-  <li>Our Adress: Streetname 22, 84503 City, Country</li>
-</Ol>
-
+      <p>Do you have any questions or you just want to say "Hello"?</p>
+      <p></p>
+      <p>You can reach out to us</p>
+      <ol>
+        <li>
+          Our email: <a href="mailto:kayongachiteta01@gmail.com">kayongachiteta01@gmail.com</a>
+        </li>
+        <li>Our phone number: <a href="tel:+251911558295">+251911558295</a></li>
+        <li>Our Address: Street name 22, 84503 City, Country</li>
+      </ol>
     </section>
-    <div class="container">
-  
-
-    </div>
+    <footer class="container">
+      <p>Copyright ...</p>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
