--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header class="container">
-      <p>AwesomeBooks</p>
+    <header class="container header">
+      <p class="page-title">Awesome Books</p>
       <nav>
-        <ul>
-          <li>List</li>
-          <li>Add New Book</li>
-          <li>Contact</li>
+        <ul class="nav-links">
+          <li class="nav-link" data-sect="1">List</li>
+          <li class="dash">|</li>
+          <li class="nav-link" data-sect="2">Add New Book</li>
+          <li class="dash">|</li>
+          <li class="nav-link" data-sect="3">Contact</li>
         </ul>
       </nav>
     </header>
