Add style to footer

--- a/index.html
+++ b/index.html
@@ -24,8 +24,6 @@
     <section class="container section section-1 section--active">
       <h1 class="section-title">All awesome books</h1>
       <div class="books-container"></div>
-
-      <div class="partition"></div>
     </section>
     <section class="container section section-1">
       <h2 class="form-title">Add a new book</h2>
@@ -49,7 +47,7 @@
         <li>Our Address: Street name 22, 84503 City, Country</li>
       </ol>
     </section>
-    <footer class="container">
+    <footer class="footer container">
       <p>Copyright ...</p>
     </footer>
     <script src="main.js"></script>
