Add class to contact infor and add style to contact.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1 class="section-title">All awesome books</h1>
       <div class="books-container"></div>
     </section>
-    <section class="container section section-2 section--active">
+    <section class="container section section-2">
       <h2 class="form-title">Add a new book</h2>
       <form action="" class="form">
         <input class="form-control" name="title" type="text" placeholder="Title" id="title" />
@@ -33,19 +33,20 @@
         <button class="btn-submit" type="submit">Add</button>
       </form>
     </section>
-    <section class="container section section-3">
-      <h2>Contact information</h2>
-
-      <p>Do you have any questions or you just want to say "Hello"?</p>
-      <p></p>
-      <p>You can reach out to us</p>
-      <ol>
-        <li>
+    <section class="container section section-3 section--active">
+      <h2 class="form-title">Contact information</h2>
+<div class="contact-container">
+      <p class="description">Do you have any questions or you just want to say "Hello"?</p>
+      <p class="description"></p>
+      <p class="description">You can reach out to us</p>
+      <ul class="contact-list">
+        <li class="contact">
           Our email: <a href="mailto:kayongachiteta01@gmail.com">kayongachiteta01@gmail.com</a>
         </li>
-        <li>Our phone number: <a href="tel:+251911558295">+251911558295</a></li>
-        <li>Our Address: Street name 22, 84503 City, Country</li>
-      </ol>
+        <li class="contact">Our phone number: <a href="tel:+251911558295">+251911558295</a></li>
+        <li class="contact">Our Address: Street name 22, 84503 City, Country</li>
+      </ul>
+    </div>
     </section>
     <footer class="footer container">
       <p>Copyright ...</p>
