--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
       <p class="page-title">Awesome Books</p>
       <nav>
         <ul class="nav-links">
-          <li class="nav-link" data-sect="1">List</li>
+          <li class="nav-link nav-link--active" data-sect="1">List</li>
           <li class="dash">|</li>
-          <li class="nav-link" data-sect="2">Add New Book</li>
+          <li class="nav-link" data-sect="2">Add new</li>
           <li class="dash">|</li>
           <li class="nav-link" data-sect="3">Contact</li>
         </ul>
       </nav>
     </header>
-    <section class="container section section-1 ">
+    <div class="year-con container"><p class="year"></p></div>
+    <section class="container section section-1 section--active">
       <h1 class="section-title">All awesome books</h1>
       <div class="books-container"></div>
     </section>
@@ -33,20 +34,20 @@
         <button class="btn-submit" type="submit">Add</button>
       </form>
     </section>
-    <section class="container section section-3 section--active">
+    <section class="container section section-3">
       <h2 class="form-title">Contact information</h2>
-<div class="contact-container">
-      <p class="description">Do you have any questions or you just want to say "Hello"?</p>
-      <p class="description"></p>
-      <p class="description">You can reach out to us</p>
-      <ul class="contact-list">
-        <li class="contact">
-          Our email: <a href="mailto:kayongachiteta01@gmail.com">kayongachiteta01@gmail.com</a>
-        </li>
-        <li class="contact">Our phone number: <a href="tel:+251911558295">+251911558295</a></li>
-        <li class="contact">Our Address: Street name 22, 84503 City, Country</li>
-      </ul>
-    </div>
+      <div class="contact-container">
+        <p class="description">Do you have any questions or you just want to say "Hello"?</p>
+        <p class="description"></p>
+        <p class="description">You can reach out to us</p>
+        <ul class="contact-list">
+          <li class="contact">
+            Our email: <a href="mailto:kayongachiteta01@gmail.com">kayongachiteta01@gmail.com</a>
+          </li>
+          <li class="contact">Our phone number: <a href="tel:+251911558295">+251911558295</a></li>
+          <li class="contact">Our Address: Street name 22, 84503 City, Country</li>
+        </ul>
+      </div>
     </section>
     <footer class="footer container">
       <p>Copyright ...</p>
